syntax = "proto3";
package network.participation.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ignite/network/x/participation/types";

message AuctionUsedAllocations {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 auction_id = 2;
  bool withdrawn = 3;
  string num_allocations = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (cosmos_proto.scalar) = "cosmos.Int"
  ];
}
