syntax = "proto3";

package network.participation.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "network/participation/v1/params.proto";
import "network/participation/v1/auction_used_allocations.proto";
import "network/participation/v1/used_allocations.proto";

option go_package = "github.com/ignite/network/x/participation/types";

// GenesisState defines the participation module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
           Params                 params                     = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
  repeated AuctionUsedAllocations auctionUsedAllocationsList = 2 [(gogoproto.nullable) = false] ;
  repeated UsedAllocations        usedAllocationsList        = 3 [(gogoproto.nullable) = false] ;
}

