syntax = "proto3";

package network.profile.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "network/profile/v1/coordinator.proto";
import "network/profile/v1/params.proto";
import "network/profile/v1/validator.proto";

option go_package = "github.com/ignite/network/x/profile/types";

// GenesisState defines the profile module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  repeated Validator validator_list = 2 [(gogoproto.nullable) = false];
  repeated ValidatorByOperatorAddress validators_by_operator_address = 3 [(gogoproto.nullable) = false];
  repeated Coordinator coordinator_list = 4 [(gogoproto.nullable) = false];
  uint64 coordinator_count = 5;
  repeated CoordinatorByAddress coordinator_by_address = 6 [(gogoproto.nullable) = false];
}
