syntax = "proto3";
package network.project.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "network/project/v1/mainnet_account.proto";
import "network/project/v1/params.proto";
import "network/project/v1/project.proto";
import "network/project/v1/project_chains.proto";

option go_package = "github.com/ignite/network/x/project/types";

// GenesisState defines the project module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  repeated Project project_list = 2 [(gogoproto.nullable) = false];
  uint64 project_count = 3;
  repeated ProjectChains project_chains_list = 4 [(gogoproto.nullable) = false];
  repeated MainnetAccount mainnet_account_list = 5 [(gogoproto.nullable) = false];
  uint64 total_shares = 6;
}
